--- a/style.css
+++ b/style.css
@@ -1,5 +1,124 @@
 /* Resets */
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 /* Fonts */
+@font-face {
+  font-family: "Avenir Black";
+  src: url("./assets/fonts/AvenirLTStd-Black.otf");
+}
+
+@font-face {
+  font-family: "Avenir Roman";
+  src: url("./assets/fonts/AvenirLTStd-Roman.otf");
+}
+
 /* Variables */
+:root {
+  --primary: #ffffff;
+  --secondary: #252525;
+}
+
 /* Base Styles */
+body {
+  color: var(--secondary);
+  background-color: var(--primary);
+}
+
+img {
+  width: 100%;
+}
+
+.container {
+  max-width: 1600px;
+  margin: 0 auto;
+}
+
+.hero {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 2rem;
+}
+
+.hero .hero__title {
+  font-family: "Avenir Black";
+  font-style: normal;
+  font-weight: 800;
+  line-height: 100%;
+}
+
+.hero .hero__content {
+  font-family: "Avenir Roman";
+  font-style: normal;
+  font-weight: 400;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.hero .hero__content .content__text {
+  color: rgba(37, 37, 37, 0.8);
+}
+
+.hero .hero__content .content__cta {
+  padding: 1rem 2rem;
+  text-decoration: none;
+  align-self: flex-start;
+  text-align: center;
+  border-radius: 1rem;
+  background-color: var(--secondary);
+  color: var(--primary);
+}
+
 /* Mobile Styles */
+.container {
+  padding: 2rem;
+}
+
+.hero {
+  padding: 60px 0;
+}
+
+.hero .hero__title {
+  font-size: 4.5rem;
+}
+
+.hero .hero__content {
+  gap: 1rem;
+}
+
+.hero .hero__content .content__text {
+  font-size: 1.325rem;
+  line-height: 26px;
+}
+
+/* Tablet Styles */
+@media screen and (min-width: 690px) {
+  .hero {
+    flex-direction: row;
+    padding: 120px 0;
+  }
+
+  .hero .hero__content .content__text {
+    font-size: 1.625rem;
+    line-height: 36px;
+  }
+}
+
+/* Laptop Styles */
+@media screen and (min-width: 960px) {
+  .container {
+    padding: 4rem;
+  }
+
+  .hero .hero__title {
+    font-size: 5.5rem;
+  }
+}
